# teleco_ros

./: CMakeLists.txt  package.xml
cfg/: bridge_mapping.yaml
launch/: bringup_robot_board.launch  waypoint_server.launch
map/: atr_2fpath.pgm  atr_2fpath.yaml  dubai_dfl_1f.pgm  dubai_dfl_1f.yaml
scripts/: atr1f_demo_bringup_telecoV.sh  atr2f_dual-task-exp_bringup_telecoV.sh  atr2fw_exp_bringup_telecoV.sh  atr3f_demo_bringup_telecoV.sh  bringup_telecoV_dubai.sh  mapping_bringup_telecoV.sh
waypoints/: waypoints.bin.atr1f  waypoints.bin.atr3f  waypoints.bin.bak
