<?xml version="1.0"?>
<package format="3">
  <name>teleco_ros</name>
  <version>0.0.0</version>
  <description>The telecoV package</description>
  
  <maintainer email="nishimura.s405@gmail.com">niscode</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
